Entrega desafio DOM

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+
+    <main id="contenedor-habitaciones">
+
+        <h3 id="titulo1">Bienvenido</h3>
+
+    </main>
     
+
+    <script src="./stock.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
