--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </main>
     
 
-    <script src="/stock.js"></script>
-    <script src="/main.js"></script>
+    <script src="stock.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
