Eventos en formularios

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
         <h3 id="titulo1">Bienvenido</h3>
 
+        <form id="formulario">
+            <input type="text">
+            <input type="number">
+            <input type="email">
+            <input type="submit" value="Enviar">    
+        </form>
+
     </main>
     
 
